# Simple_STM32xx_IDE

./: CMakeLists.txt  main.cpp
Component/Tools/System/: Linker.ld  Makefile  Startup.c
Component/data/: PeripheralsData.cpp  PeripheralsData.h
Component/include/: ConfigSystemDialog.h  DirectoryTreeManager.h  MyApp.h  MyTreeItemData.h  STM32IDE.h
Component/src/: ConfigSystemDialog.cpp  DirectoryTreeManager.cpp  MyApp.cpp  MyTreeItemData.cpp  STM32IDE.cpp
main/: main.cpp  main.h
